force-app/main/default/objects/Asset/fields/CombinedAuthStatus__c.field-meta.xml
<CustomField>
    <fullName>CombinedAuthStatus__c</fullName>
    <description>Modem activation status eg. AUTHORIZED ,WAITING_FOR_AUTH</description>
    <label>Combined Auth Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>