force-app/main/default/objects/Asset/fields/DriveMileage__c.field-meta.xml
<CustomField>
    <fullName>DriveMileage__c</fullName>
    <label>Drive Mileage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>