force-app/main/default/objects/Asset/fields/DriveMileageDate__c.field-meta.xml
<CustomField>
    <fullName>DriveMileageDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drive Mileage Date</label>
    <type>Date</type>
</CustomField>