force-app/main/default/objects/Asset/fields/DriveType__c.field-meta.xml
<CustomField>
    <fullName>DriveType__c</fullName>
    <label>Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rear-Wheel-Drive</fullName>
            </value>
            <value>
                <fullName>Front-Wheel-Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>