force-app/main/default/objects/Asset/fields/EngineType__c.field-meta.xml
<CustomField>
    <fullName>EngineType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>