force-app/main/default/objects/Asset/fields/FleetCustomer__c.field-meta.xml
<CustomField>
    <fullName>FleetCustomer__c</fullName>
    <description>Indicates how the vehicle was sold(Retail /fleet etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fleet Customer</label>
    <length>6</length>
    <type>Text</type>
</CustomField>