force-app/main/default/objects/Asset/fields/FuelType__c.field-meta.xml
<CustomField>
    <fullName>FuelType__c</fullName>
    <description>Gasoline, Electric  (BEV)</description>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>