force-app/main/default/objects/Asset/fields/FuelTypeCode__c.field-meta.xml
<CustomField>
    <fullName>FuelTypeCode__c</fullName>
    <description>Fuel Type Indicator  eg.  G,E</description>
    <label>Fuel Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ExampleQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>