force-app/main/default/objects/Asset/fields/FuelTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>FuelTypeDesc__c</fullName>
    <description>Fuel type description eg. Gasoline,Electric</description>
    <label>Fuel Type Desc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>