force-app/main/default/objects/Asset/fields/FuelTypeGroup__c.field-meta.xml
<CustomField>
    <fullName>FuelTypeGroup__c</fullName>
    <label>Fuel Type Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>