force-app/main/default/objects/Asset/fields/HasModem__c.field-meta.xml
<CustomField>
    <fullName>HasModem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Modem</label>
    <type>Checkbox</type>
</CustomField>