force-app/main/default/objects/Asset/fields/HasNav__c.field-meta.xml
<CustomField>
    <fullName>HasNav__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Navigation</label>
    <type>Checkbox</type>
</CustomField>