force-app/main/default/objects/Asset/fields/LikelyHoodToServiceRank__c.field-meta.xml
<CustomField>
    <fullName>LikelyHoodToServiceRank__c</fullName>
    <label>Likelihood To Service Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>