force-app/main/default/objects/Asset/fields/MediaGatewayModule__c.field-meta.xml
<CustomField>
    <fullName>MediaGatewayModule__c</fullName>
    <description>Media gateway module on the vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Media Gateway Module</label>
    <type>TextArea</type>
</CustomField>