force-app/main/default/objects/Asset/fields/MilesSinceLastService__c.field-meta.xml
<CustomField>
    <fullName>MilesSinceLastService__c</fullName>
    <label>Miles Since Last Service</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>