force-app/main/default/objects/Asset/fields/ModemBundleCode__c.field-meta.xml
<CustomField>
    <fullName>ModemBundleCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modem Bundle Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>