force-app/main/default/objects/Asset/fields/ModemBundleDescription__c.field-meta.xml
<CustomField>
    <fullName>ModemBundleDescription__c</fullName>
    <description>Description of modem bundle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Modem Bundle Description</label>
    <type>TextArea</type>
</CustomField>