force-app/main/default/objects/Asset/fields/ModemLastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>ModemLastUpdateDate__c</fullName>
    <description>Last updated date of the modem</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Modem Last Update Date</label>
    <type>Date</type>
</CustomField>