force-app/main/default/objects/Asset/fields/ModemStatus__c.field-meta.xml
<CustomField>
    <fullName>ModemStatus__c</fullName>
    <label>Modem Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>