force-app/main/default/objects/Asset/fields/NumberOfDoors__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDoors__c</fullName>
    <description>number of doors on the vehicle</description>
    <label>Number Of Doors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>