force-app/main/default/objects/Asset/fields/OdometerMiles__c.field-meta.xml
<CustomField>
    <fullName>OdometerMiles__c</fullName>
    <label>Miles On Odometer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>