force-app/main/default/objects/Asset/fields/OrderingDealerCountryCode__c.field-meta.xml
<CustomField>
    <fullName>OrderingDealerCountryCode__c</fullName>
    <description>Order country code</description>
    <label>Ordering Dealer Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>