force-app/main/default/objects/Asset/fields/OrderTypeCategoryDesc__c.field-meta.xml
<CustomField>
    <fullName>OrderTypeCategoryDesc__c</fullName>
    <description>Order type category description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Type Category Desc</label>
    <type>TextArea</type>
</CustomField>