force-app/main/default/objects/Asset/fields/OrderTypeDetailedDesc__c.field-meta.xml
<CustomField>
    <fullName>OrderTypeDetailedDesc__c</fullName>
    <description>order type detailed description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Type Detailed Desc</label>
    <type>TextArea</type>
</CustomField>