force-app/main/default/objects/Asset/fields/OwnershipCycleNumber__c.field-meta.xml
<CustomField>
    <fullName>OwnershipCycleNumber__c</fullName>
    <label>Ownership Cycle Number</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>