force-app/main/default/objects/Asset/fields/PropencityBattery__c.field-meta.xml
<CustomField>
    <fullName>PropencityBattery__c</fullName>
    <label>Propencity Battery</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>