force-app/main/default/objects/Asset/fields/PropencityBrake__c.field-meta.xml
<CustomField>
    <fullName>PropencityBrake__c</fullName>
    <label>Propencity Brake</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>