force-app/main/default/objects/Asset/fields/PropencityOil__c.field-meta.xml
<CustomField>
    <fullName>PropencityOil__c</fullName>
    <label>Propencity Oil</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>