force-app/main/default/objects/Asset/fields/PropencityTire__c.field-meta.xml
<CustomField>
    <fullName>PropencityTire__c</fullName>
    <label>Propencity Tire</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>