force-app/main/default/objects/Asset/fields/RemoteStartFlag__c.field-meta.xml
<CustomField>
    <fullName>RemoteStartFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remote start flag</description>
    <label>Remote Start Flag</label>
    <type>Checkbox</type>
</CustomField>