force-app/main/default/objects/Asset/fields/RetailSaleDate__c.field-meta.xml
<CustomField>
    <fullName>RetailSaleDate__c</fullName>
    <description>Retail sale date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Retail Sale Date</label>
    <type>Date</type>
</CustomField>