force-app/main/default/objects/Asset/fields/RetailSaleDealer__c.field-meta.xml
<CustomField>
    <fullName>RetailSaleDealer__c</fullName>
    <description>Retail sale dealer code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Retail Sale Dealer</label>
    <type>TextArea</type>
</CustomField>