force-app/main/default/objects/Asset/fields/RetailSaleDealerCountry__c.field-meta.xml
<CustomField>
    <fullName>RetailSaleDealerCountry__c</fullName>
    <description>Retail sale dealer country code .eg.-USA, CAN</description>
    <label>Retail Sale Dealer Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>