force-app/main/default/objects/Asset/fields/SaleTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>SaleTypeDesc__c</fullName>
    <description>Description of sales type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Type Desc</label>
    <type>TextArea</type>
</CustomField>