force-app/main/default/objects/Asset/fields/SaleTypeGroupCode__c.field-meta.xml
<CustomField>
    <fullName>SaleTypeGroupCode__c</fullName>
    <description>Code associated with sales type</description>
    <label>Sale Type Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>