force-app/main/default/objects/Asset/fields/SellingDealerCountryCode__c.field-meta.xml
<CustomField>
    <fullName>SellingDealerCountryCode__c</fullName>
    <description>country code of selling dealer .eg -USA, CAN</description>
    <label>Selling Dealer Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>