force-app/main/default/objects/Asset/fields/ServiceLoyalty30days__c.field-meta.xml
<CustomField>
    <fullName>ServiceLoyalty30days__c</fullName>
    <label>Service Loyalty 30 Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>