force-app/main/default/objects/Asset/fields/SiriusFlag__c.field-meta.xml
<CustomField>
    <fullName>SiriusFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sirius flag</description>
    <label>Sirius Flag</label>
    <type>Checkbox</type>
</CustomField>