force-app/main/default/objects/Asset/fields/SteeringPositionDesc__c.field-meta.xml
<CustomField>
    <fullName>SteeringPositionDesc__c</fullName>
    <description>Description of steering position</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Steering Position Desc</label>
    <type>TextArea</type>
</CustomField>