force-app/main/default/objects/Asset/fields/SyncFlag__c.field-meta.xml
<CustomField>
    <fullName>SyncFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean flag indicating presence of sync module</description>
    <label>Sync Flag</label>
    <type>Checkbox</type>
</CustomField>