force-app/main/default/objects/Asset/fields/SyncInstallationDate__c.field-meta.xml
<CustomField>
    <fullName>SyncInstallationDate__c</fullName>
    <description>sync installation date for the vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sync Installation Date</label>
    <type>Date</type>
</CustomField>