force-app/main/default/objects/Asset/fields/SyncPlatformCode__c.field-meta.xml
<CustomField>
    <fullName>SyncPlatformCode__c</fullName>
    <description>Sync platform code value</description>
    <label>Sync Platform Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>