force-app/main/default/objects/Asset/fields/SyncVersion__c.field-meta.xml
<CustomField>
    <fullName>SyncVersion__c</fullName>
    <description>Sync version installed on the vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sync Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>