force-app/main/default/objects/Asset/fields/TransmissionDesc__c.field-meta.xml
<CustomField>
    <fullName>TransmissionDesc__c</fullName>
    <description>Transmission description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transmission Desc</label>
    <type>TextArea</type>
</CustomField>