force-app/main/default/objects/Asset/fields/TrimPackageLevelCode__c.field-meta.xml
<CustomField>
    <fullName>TrimPackageLevelCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trim Package Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>