force-app/main/default/objects/Asset/fields/TruckCabDesc__c.field-meta.xml
<CustomField>
    <fullName>TruckCabDesc__c</fullName>
    <description>Trunk cab description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Truck Cab Desc</label>
    <type>TextArea</type>
</CustomField>