force-app/main/default/objects/Asset/fields/TruckRearWheelDesc__c.field-meta.xml
<CustomField>
    <fullName>TruckRearWheelDesc__c</fullName>
    <description>Truck rear wheel description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Truck Rear Wheel Desc</label>
    <type>TextArea</type>
</CustomField>