force-app/main/default/objects/Asset/fields/VehicleBodyStyle__c.field-meta.xml
<CustomField>
    <fullName>VehicleBodyStyle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Body Style</label>
    <length>60</length>
    <type>Text</type>
</CustomField>