force-app/main/default/objects/Asset/fields/VehicleColor__c.field-meta.xml
<CustomField>
    <fullName>VehicleColor__c</fullName>
    <description>Color of the vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Color</label>
    <type>TextArea</type>
</CustomField>