force-app/main/default/objects/Asset/fields/VehicleDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleDesc__c</fullName>
    <description>Vehicle description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Desc</label>
    <type>TextArea</type>
</CustomField>