force-app/main/default/objects/Asset/fields/VehicleDrivelineDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleDrivelineDesc__c</fullName>
    <description>Vehicle driveline description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Driveline Desc</label>
    <type>TextArea</type>
</CustomField>