force-app/main/default/objects/Asset/fields/VehicleDriveRatio__c.field-meta.xml
<CustomField>
    <fullName>VehicleDriveRatio__c</fullName>
    <description>Vehicle drive ratio</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Drive Ratio</label>
    <type>TextArea</type>
</CustomField>