force-app/main/default/objects/Asset/fields/VehicleEmissionMfcDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleEmissionMfcDesc__c</fullName>
    <description>Vehicle emission MFC description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Emission Mfc Desc</label>
    <type>TextArea</type>
</CustomField>