force-app/main/default/objects/Asset/fields/VehicleEmissionPfcDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleEmissionPfcDesc__c</fullName>
    <description>Vehicle emission PFC description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Emission Pfc Desc</label>
    <type>TextArea</type>
</CustomField>