force-app/main/default/objects/Asset/fields/VehicleFrontSeatWersDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleFrontSeatWersDesc__c</fullName>
    <description>Vehicle front seat WERS description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Front Seat Wers Desc</label>
    <type>TextArea</type>
</CustomField>