force-app/main/default/objects/Asset/fields/VehicleLineDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleLineDesc__c</fullName>
    <description>Vehicle line description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Line Desc</label>
    <type>TextArea</type>
</CustomField>