force-app/main/default/objects/Asset/fields/VehicleMake__c.field-meta.xml
<CustomField>
    <fullName>VehicleMake__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Make</label>
    <length>50</length>
    <type>Text</type>
</CustomField>