force-app/main/default/objects/Asset/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>