force-app/main/default/objects/Asset/fields/VehicleModelYear__c.field-meta.xml
<CustomField>
    <fullName>VehicleModelYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>