force-app/main/default/objects/Asset/fields/VehicleNameplate__c.field-meta.xml
<CustomField>
    <fullName>VehicleNameplate__c</fullName>
    <description>Vehicle Nameplate</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Nameplate</label>
    <type>TextArea</type>
</CustomField>