force-app/main/default/objects/Asset/fields/VehicleOrderingCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>VehicleOrderingCategoryCode__c</fullName>
    <description>Vehicle ordering category code</description>
    <label>Vehicle Ordering Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>