force-app/main/default/objects/Asset/fields/VehicleOrderType__c.field-meta.xml
<CustomField>
    <fullName>VehicleOrderType__c</fullName>
    <description>Vehicle order type</description>
    <label>Vehicle Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>