force-app/main/default/objects/Asset/fields/VehiclePepCode__c.field-meta.xml
<CustomField>
    <fullName>VehiclePepCode__c</fullName>
    <description>Vehicle PEP code</description>
    <label>Vehicle Pep Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>