force-app/main/default/objects/Asset/fields/VehiclePlantToDealerDate__c.field-meta.xml
<CustomField>
    <fullName>VehiclePlantToDealerDate__c</fullName>
    <description>Vehicle plant to dealer date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Plant To Dealer Date</label>
    <type>Date</type>
</CustomField>