force-app/main/default/objects/Asset/fields/VehicleProductionDate__c.field-meta.xml
<CustomField>
    <fullName>VehicleProductionDate__c</fullName>
    <description>Vehicle production date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Production Date</label>
    <type>Date</type>
</CustomField>