force-app/main/default/objects/Asset/fields/VehicleSaleCategoryIndDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleSaleCategoryIndDesc__c</fullName>
    <description>Indicates how the vehicle was sold(Retail /fleet etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Sale Category Ind Desc</label>
    <type>TextArea</type>
</CustomField>