force-app/main/default/objects/Asset/fields/VehicleSaleRegionCode__c.field-meta.xml
<CustomField>
    <fullName>VehicleSaleRegionCode__c</fullName>
    <description>Vehicle Sale Region code</description>
    <label>Vehicle Sale Region Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>