force-app/main/default/objects/Asset/fields/VehicleSaleTypeCode__c.field-meta.xml
<CustomField>
    <fullName>VehicleSaleTypeCode__c</fullName>
    <description>Vehicle Sale Type code</description>
    <label>Vehicle Sale Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>