force-app/main/default/objects/Asset/fields/VehicleSeriesDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleSeriesDesc__c</fullName>
    <description>Vehicle Series description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Series Desc</label>
    <type>TextArea</type>
</CustomField>