force-app/main/default/objects/Asset/fields/VehicleSpecialVersionName__c.field-meta.xml
<CustomField>
    <fullName>VehicleSpecialVersionName__c</fullName>
    <description>Vehicle special version name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Special Version Name</label>
    <type>TextArea</type>
</CustomField>