force-app/main/default/objects/Asset/fields/VehicleTagsDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleTagsDesc__c</fullName>
    <description>Tags for additional descriptiors</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Tags Desc</label>
    <type>TextArea</type>
</CustomField>