force-app/main/default/objects/Asset/fields/VehicleTypeCode__c.field-meta.xml
<CustomField>
    <fullName>VehicleTypeCode__c</fullName>
    <description>Vehicle type code .Eg - T, C etc</description>
    <label>Vehicle Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>