force-app/main/default/objects/Asset/fields/VehicleTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleTypeDesc__c</fullName>
    <description>Vehicle type description Eg - Truck,Car etc</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Type Desc</label>
    <type>TextArea</type>
</CustomField>