force-app/main/default/objects/Asset/fields/VehicleVersionDesc__c.field-meta.xml
<CustomField>
    <fullName>VehicleVersionDesc__c</fullName>
    <description>vehicle version description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Version Desc</label>
    <type>TextArea</type>
</CustomField>