force-app/main/default/objects/Asset/fields/VehicleVersionName__c.field-meta.xml
<CustomField>
    <fullName>VehicleVersionName__c</fullName>
    <description>Vehicle version name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Version Name</label>
    <type>TextArea</type>
</CustomField>