force-app/main/default/objects/Asset/fields/VinAttributeUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>VinAttributeUpdateDate__c</fullName>
    <description>VIN Attribute Update Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN Attribute Update Date</label>
    <type>DateTime</type>
</CustomField>