force-app/main/default/objects/Asset/fields/WarrantyCancelCode__c.field-meta.xml
<CustomField>
    <fullName>WarrantyCancelCode__c</fullName>
    <description>Cancellation code on warranty</description>
    <label>Warranty Cancel Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>