force-app/main/default/objects/Asset/fields/WarrantyCancelDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyCancelDate__c</fullName>
    <description>Cancellation date on warranty</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Warranty Cancel Date</label>
    <type>Date</type>
</CustomField>