force-app/main/default/objects/Asset/fields/WarrantyEndDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyEndDate__c</fullName>
    <description>Warranty end date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>