force-app/main/default/objects/Asset/fields/WarrantyStartDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyStartDate__c</fullName>
    <description>Warranty start date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>