force-app/main/default/objects/Asset/fields/WheelBaseDesc__c.field-meta.xml
<CustomField>
    <fullName>WheelBaseDesc__c</fullName>
    <description>Wheel base description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Wheel Base Desc</label>
    <type>TextArea</type>
</CustomField>