force-app/main/default/objects/Asset/fields/WheelBaseWersDesc__c.field-meta.xml
<CustomField>
    <fullName>WheelBaseWersDesc__c</fullName>
    <description>Wheel base WERS code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Wheel Base Wers Desc</label>
    <type>TextArea</type>
</CustomField>